--- a/index.html
+++ b/index.html
@@ -190,6 +190,13 @@
         </div>
       </section>
 
+      <section class="section roster">
+        <h1 class="section-title">Меню</h1>
+        <div class="accordeon">
+
+        </div>
+      </section>
+
       <section class="section reviews">
         <ul class="reviews__list">
           <li class="reviews__item" style="background-image: url('images/rev-1.png')">
