--- a/index.html
+++ b/index.html
@@ -30,28 +30,28 @@
             </div>
 
             <div class="header__buttons">
-              <nav class="menu">
-                <ul class="menu__list">
-                  <li class="menu__item">
-                    <a href="#" class="menu__link">О нас</a>
+              <nav class="nav">
+                <ul class="nav__list">
+                  <li class="nav__item">
+                    <a href="#" class="nav__link">О нас</a>
                   </li>
-                  <li class="menu__item">
-                    <a href="#" class="menu__link">Бургеры</a>
+                  <li class="nav__item">
+                    <a href="#" class="nav__link">Бургеры</a>
                   </li>
-                  <li class="menu__item">
-                    <a href="#" class="menu__link">Команда</a>
+                  <li class="nav__item">
+                    <a href="#" class="nav__link">Команда</a>
                   </li>
-                  <li class="menu__item">
-                    <a href="#" class="menu__link">Меню</a>
+                  <li class="nav__item">
+                    <a href="#" class="nav__link">Меню</a>
                   </li>
-                  <li class="menu__item">
-                    <a href="#" class="menu__link">Отзывы</a>
+                  <li class="nav__item">
+                    <a href="#" class="nav__link">Отзывы</a>
                   </li>
-                  <li class="menu__item">
-                    <a href="#" class="menu__link">Как мы работаем</a>
+                  <li class="nav__item">
+                    <a href="#" class="nav__link">Как мы работаем</a>
                   </li>
-                  <li class="menu__item">
-                    <a href="#" class="menu__link">Контакты</a>
+                  <li class="nav__item">
+                    <a href="#" class="nav__link">Контакты</a>
                   </li>
                 </ul>
               </nav>
@@ -190,9 +190,9 @@
         </div>
       </section>
 
-      <section class="section roster">
+      <section class="section menu">
         <h1 class="section-title">Меню</h1>
-        <div class="accordeon">
+        <div class="menu-accordeon">
 
         </div>
       </section>
