--- a/index.html
+++ b/index.html
@@ -134,53 +134,53 @@
         <div class="container team__container">
           <div class="team__content">
             <h1 class="section-title">Команда</h1>
-            <div class="accordeon">
-              <ul class="accrodeon__list">
-                <li class="accordeon__item">
-                  <h3 class="accordeon__title">Дэниэл Редклиф</h3>
-                  <div class="accordeon__content">
-                    <div class="accordeon__avatar">
-                      <img class="accordeon__avatar-img" src="./images/team-2.png" alt="Фото Дэниэла">
+            <div class="team-accordeon">
+              <ul class="team-accrodeon__list">
+                <li class="team-accordeon__item">
+                  <h3 class="team-accordeon__title">Дэниэл Редклиф</h3>
+                  <div class="team-accordeon__content">
+                    <div class="team-accordeon__avatar">
+                      <img class="team-accordeon__avatar-img" src="./images/team-2.png" alt="Фото Дэниэла">
                     </div>
-                    <div class="accordeon__description">
-                      <h4 class="accordeon__description-title">Оператор</h4>
-                      <p class="accordeon__description-text">С радостью поможет подобрать идеальный бургер и оформить заказ.</p>
-                    </div>
-                  </div>
-                </li>
-                <li class="accordeon__item accordeon__item_active">
-                  <h3 class="accordeon__title">Ричард Джеймс</h3>
-                  <div class="accordeon__content">
-                    <div class="accordeon__avatar">
-                      <img class="accordeon__avatar-img" src="./images/team-2.png" alt="Фото Ричарда">
-                    </div>
-                    <div class="accordeon__description">
-                      <h4 class="accordeon__description-title">Оператор</h4>
-                      <p class="accordeon__description-text">С радостью поможет подобрать идеальный бургер и оформить заказ.</p>
+                    <div class="team-accordeon__description">
+                      <h4 class="team-accordeon__description-title">Оператор</h4>
+                      <p class="team-accordeon__description-text">С радостью поможет подобрать идеальный бургер и оформить заказ.</p>
                     </div>
                   </div>
                 </li>
-                <li class="accordeon__item">
-                  <h3 class="accordeon__title">Джейк Финн</h3>
-                  <div class="accordeon__content">
-                    <div class="accordeon__avatar">
-                      <img class="accordeon__avatar-img" src="./images/team-2.png" alt="Фото Джейка">
+                <li class="team-accordeon__item team-accordeon__item_active">
+                  <h3 class="team-accordeon__title">Ричард Джеймс</h3>
+                  <div class="team-accordeon__content">
+                    <div class="team-accordeon__avatar">
+                      <img class="team-accordeon__avatar-img" src="./images/team-2.png" alt="Фото Ричарда">
                     </div>
-                    <div class="accordeon__description">
-                      <h4 class="accordeon__description-title">Оператор</h4>
-                      <p class="accordeon__description-text">С радостью поможет подобрать идеальный бургер и оформить заказ.</p>
+                    <div class="team-accordeon__description">
+                      <h4 class="team-accordeon__description-title">Оператор</h4>
+                      <p class="team-accordeon__description-text">С радостью поможет подобрать идеальный бургер и оформить заказ.</p>
                     </div>
                   </div>
                 </li>
-                <li class="accordeon__item">
-                  <h3 class="accordeon__title">Николай Иванов</h3>
-                  <div class="accordeon__content">
-                    <div class="accordeon__avatar">
-                      <img class="accordeon__avatar-img" src="./images/team-2.png" alt="Фото Николая">
+                <li class="team-accordeon__item">
+                  <h3 class="team-accordeon__title">Джейк Финн</h3>
+                  <div class="team-accordeon__content">
+                    <div class="team-accordeon__avatar">
+                      <img class="team-accordeon__avatar-img" src="./images/team-2.png" alt="Фото Джейка">
                     </div>
-                    <div class="accordeon__description">
-                      <h4 class="accordeon__description-title">Оператор</h4>
-                      <p class="accordeon__description-text">С радостью поможет подобрать идеальный бургер и оформить заказ.</p>
+                    <div class="team-accordeon__description">
+                      <h4 class="team-accordeon__description-title">Оператор</h4>
+                      <p class="team-accordeon__description-text">С радостью поможет подобрать идеальный бургер и оформить заказ.</p>
+                    </div>
+                  </div>
+                </li>
+                <li class="team-accordeon__item">
+                  <h3 class="team-accordeon__title">Николай Иванов</h3>
+                  <div class="team-accordeon__content">
+                    <div class="team-accordeon__avatar">
+                      <img class="team-accordeon__avatar-img" src="./images/team-2.png" alt="Фото Николая">
+                    </div>
+                    <div class="team-accordeon__description">
+                      <h4 class="team-accordeon__description-title">Оператор</h4>
+                      <p class="team-accordeon__description-text">С радостью поможет подобрать идеальный бургер и оформить заказ.</p>
                     </div>
                   </div>
                 </li>
