--- a/index.html
+++ b/index.html
@@ -25,8 +25,10 @@
 
           <header class="header">
 
-            <div class="logo">
-              <img src="images/logo.png" alt="Логотип Мистер Бургерс">
+            <div class="header__logo">
+              <svg class="header__logo-icon">
+                <use xlink:href="./sprite.svg#logo-icon"></use>
+              </svg>
             </div>
 
             <div class="header__buttons">
@@ -73,7 +75,11 @@
           </div>
 
           <div class="arrow-down">
-            <a href="#" class="arrow-down__link"></a>
+            <a href="#" class="arrow-down__link">
+              <svg class="arrow-down__icon">
+                <use xlink:href="./sprite.svg#arrow-icon"></use>
+              </svg>
+            </a>
           </div>
 
         </div>
@@ -85,7 +91,9 @@
           <ul class="best__list">
             <li class="best__item">
               <div class="best__image">
-                <img src="images/icons/meat.svg" class="best__icon" alt="Иконка мяса">
+                <svg class="best__icon">
+                  <use xlink:href="./sprite.svg#meat-icon"></use>
+                </svg>
               </div>
               <div class="best__content">
                 <div class="best__content-title">100% Свежее мясо</div>
@@ -99,7 +107,9 @@
             </li>
             <li class="best__item">
               <div class="best__image">
-                <img src="images/icons/hand.svg" class="best__icon" alt="Иконка ладони">
+                <svg class="best__icon">
+                  <use xlink:href="./sprite.svg#hand-icon"></use>
+                </svg>
               </div>
               <div class="best__content">
                 <div class="best__content-title">Ручная сборка</div>
@@ -114,7 +124,9 @@
             </li>
             <li class="best__item">
               <div class="best__image">
-                <img src="images/icons/natural.svg" class="best__icon" alt="Иконка листочка">
+                <svg class="best__icon">
+                  <use xlink:href="./sprite.svg#natural-icon"></use>
+                </svg>
               </div>
               <div class="best__content">
                 <div class="best__content-title">Натуральные ингредиенты</div>
@@ -193,7 +205,17 @@
       <section class="section menu">
         <h1 class="section-title">Меню</h1>
         <div class="menu-accordeon">
-
+          <ul class="menu-accordeon__list">
+            <li class="menu-accordeon__item">
+              <h2 class="menu-accordeon__title">Для мясоедов</h2>
+            </li>
+            <li class="menu-accordeon__item">
+              <h2 class="menu-accordeon__title">Вегетарианское</h2>
+            </li>
+            <li class="menu-accordeon__item">
+              <h2 class="menu-accordeon__title">Диетическое</h2>
+            </li>
+          </ul>
         </div>
       </section>
 
