--- a/index.html
+++ b/index.html
@@ -425,6 +425,54 @@
         </div>
       </section>
 
+      <section class="section map">
+        <footer class="footer">
+          <div class="container footer__container">
+            <div class="footer__content">
+              <div class="footer__adress">Санкт-Петербург, ул.Бабушкина, д.12/1, 15</div>
+              <div class="footer__contacts">
+                <svg class="footer__contacts-icon">
+                  <use xlink:href="./sprite.svg#phone-icon"></use>
+                </svg>
+                <a href="tel:+7(812)3771337" class="footer__contacts-phone">+7 (812) 377-13-37</a>
+              </div>
+            </div>
+            <div class="footer__social">
+              <ul class="social__list">
+                <li class="social__item">
+                  <a href="#" class="social__link">
+                    <svg class="social__icon">
+                      <use xlink:href="./sprite.svg#vk-icon"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li class="social__item">
+                  <a href="#" class="social__link">
+                    <svg class="social__icon">
+                      <use xlink:href="./sprite.svg#fb-icon"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li class="social__item">
+                  <a href="#" class="social__link">
+                    <svg class="social__icon">
+                      <use xlink:href="./sprite.svg#inst-icon"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li class="social__item">
+                  <a href="#" class="social__link">
+                    <svg class="social__icon">
+                      <use xlink:href="./sprite.svg#twitter-icon"></use>
+                    </svg>
+                  </a>
+                </li>
+              </ul>
+            </div>
+          </div>
+        </footer>
+      </section>
+
 <!-- MainContent closed -->
     </div>
 
