--- a/index.html
+++ b/index.html
@@ -203,17 +203,53 @@
       </section>
 
       <section class="section menu">
-        <h1 class="section-title">Меню</h1>
+        <h1 class="section-title section-title_white section-title_menu">Меню</h1>
         <div class="menu-accordeon">
           <ul class="menu-accordeon__list">
             <li class="menu-accordeon__item">
               <h2 class="menu-accordeon__title">Для мясоедов</h2>
+              <!-- <div class="menu-accordeon__content">
+                <p class="menu-accordeon__content-text">
+                  Речевой акт редуцирует диалектический характер. Развивая эту тему,
+                  заимствование редуцирует конструктивный механизм сочленений. Лирический субъект
+                  начинает диссонансный анжамбеман. Наш современник стал особенно чутко относиться
+                  к слову, однако механизм сочленений неустойчив. Модальность высказывания, как
+                  справедливо считает И.Гальперин, пространственно выбирает метр. Речевой акт
+                  редуцирует диалектический характер. Развивая эту тему, заимствование редуцирует
+                  конструктивный механизм сочленений. Лирический субъект начинает диссонансный
+                  анжамбеман. Наш современник стал особенно чутко относиться к слову.
+                </p>
+              </div> -->
             </li>
             <li class="menu-accordeon__item">
               <h2 class="menu-accordeon__title">Вегетарианское</h2>
+              <!-- <div class="menu-accordeon__content">
+                <p class="menu-accordeon__content-text">
+                  Речевой акт редуцирует диалектический характер. Развивая эту тему,
+                  заимствование редуцирует конструктивный механизм сочленений. Лирический субъект
+                  начинает диссонансный анжамбеман. Наш современник стал особенно чутко относиться
+                  к слову, однако механизм сочленений неустойчив. Модальность высказывания, как
+                  справедливо считает И.Гальперин, пространственно выбирает метр. Речевой акт
+                  редуцирует диалектический характер. Развивая эту тему, заимствование редуцирует
+                  конструктивный механизм сочленений. Лирический субъект начинает диссонансный
+                  анжамбеман. Наш современник стал особенно чутко относиться к слову.
+                </p>
+              </div> -->
             </li>
             <li class="menu-accordeon__item">
               <h2 class="menu-accordeon__title">Диетическое</h2>
+              <!-- <div class="menu-accordeon__content">
+                <p class="menu-accordeon__content-text">
+                  Речевой акт редуцирует диалектический характер. Развивая эту тему,
+                  заимствование редуцирует конструктивный механизм сочленений. Лирический субъект
+                  начинает диссонансный анжамбеман. Наш современник стал особенно чутко относиться
+                  к слову, однако механизм сочленений неустойчив. Модальность высказывания, как
+                  справедливо считает И.Гальперин, пространственно выбирает метр. Речевой акт
+                  редуцирует диалектический характер. Развивая эту тему, заимствование редуцирует
+                  конструктивный механизм сочленений. Лирический субъект начинает диссонансный
+                  анжамбеман. Наш современник стал особенно чутко относиться к слову.
+                </p>
+              </div> -->
             </li>
           </ul>
         </div>
