--- a/index.html
+++ b/index.html
@@ -32,32 +32,39 @@
             </div>
 
             <div class="header__buttons">
-              <nav class="nav">
-                <ul class="nav__list">
-                  <li class="nav__item">
-                    <a href="#" class="nav__link">О нас</a>
-                  </li>
-                  <li class="nav__item">
-                    <a href="#" class="nav__link">Бургеры</a>
-                  </li>
-                  <li class="nav__item">
-                    <a href="#" class="nav__link">Команда</a>
-                  </li>
-                  <li class="nav__item">
-                    <a href="#" class="nav__link">Меню</a>
-                  </li>
-                  <li class="nav__item">
-                    <a href="#" class="nav__link">Отзывы</a>
-                  </li>
-                  <li class="nav__item">
-                    <a href="#" class="nav__link">Как мы работаем</a>
-                  </li>
-                  <li class="nav__item">
-                    <a href="#" class="nav__link">Контакты</a>
-                  </li>
-                </ul>
-              </nav>
-              <a href="#" class="btn hero__order-btn">Заказать</a>
+              <div class="header__menu">
+                <nav class="nav">
+                  <ul class="nav__list">
+                    <li class="nav__item">
+                      <a href="#" class="nav__link">О нас</a>
+                    </li>
+                    <li class="nav__item">
+                      <a href="#" class="nav__link">Бургеры</a>
+                    </li>
+                    <li class="nav__item">
+                      <a href="#" class="nav__link">Команда</a>
+                    </li>
+                    <li class="nav__item">
+                      <a href="#" class="nav__link">Меню</a>
+                    </li>
+                    <li class="nav__item">
+                      <a href="#" class="nav__link">Отзывы</a>
+                    </li>
+                    <li class="nav__item">
+                      <a href="#" class="nav__link">Как мы работаем</a>
+                    </li>
+                    <li class="nav__item">
+                      <a href="#" class="nav__link">Контакты</a>
+                    </li>
+                  </ul>
+                </nav>
+              </div>
+              <div class="header__links">
+                <a href="#" class="btn hero__order-btn">Заказать</a>
+                <a class="hamburger-menu-link" href="">
+                    <div class="hamburger-menu-link__bars"></div>
+                </a>
+              </div>
             </div>
 
           </header>
