--- a/index.html
+++ b/index.html
@@ -213,9 +213,11 @@
         <div class="menu-accordeon">
           <ul class="menu-accordeon__list">
             <li class="menu-accordeon__item">
-              <h2 class="menu-accordeon__title">Для мясоедов</h2>
-              <!-- <div class="menu-accordeon__content">
-                <p class="menu-accordeon__content-text">
+              <div class="menu-accordeon__title">
+                <h2 class="menu-accordeon__title-txt">Для мясоедов</h2>
+              </div>
+              <div class="menu-accordeon__description">
+                <p class="menu-accordeon__description-txt">
                   Речевой акт редуцирует диалектический характер. Развивая эту тему,
                   заимствование редуцирует конструктивный механизм сочленений. Лирический субъект
                   начинает диссонансный анжамбеман. Наш современник стал особенно чутко относиться
@@ -225,12 +227,14 @@
                   конструктивный механизм сочленений. Лирический субъект начинает диссонансный
                   анжамбеман. Наш современник стал особенно чутко относиться к слову.
                 </p>
-              </div> -->
+              </div>
             </li>
             <li class="menu-accordeon__item">
-              <h2 class="menu-accordeon__title">Вегетарианское</h2>
-              <!-- <div class="menu-accordeon__content">
-                <p class="menu-accordeon__content-text">
+              <div class="menu-accordeon__title">
+                <h2 class="menu-accordeon__title-txt">Для мясоедов</h2>
+              </div>
+              <div class="menu-accordeon__description">
+                <p class="menu-accordeon__description-txt">
                   Речевой акт редуцирует диалектический характер. Развивая эту тему,
                   заимствование редуцирует конструктивный механизм сочленений. Лирический субъект
                   начинает диссонансный анжамбеман. Наш современник стал особенно чутко относиться
@@ -240,12 +244,14 @@
                   конструктивный механизм сочленений. Лирический субъект начинает диссонансный
                   анжамбеман. Наш современник стал особенно чутко относиться к слову.
                 </p>
-              </div> -->
+              </div>
             </li>
             <li class="menu-accordeon__item">
-              <h2 class="menu-accordeon__title">Диетическое</h2>
-              <!-- <div class="menu-accordeon__content">
-                <p class="menu-accordeon__content-text">
+              <div class="menu-accordeon__title">
+                <h2 class="menu-accordeon__title-txt">Для мясоедов</h2>
+              </div>
+              <div class="menu-accordeon__description">
+                <p class="menu-accordeon__description-txt">
                   Речевой акт редуцирует диалектический характер. Развивая эту тему,
                   заимствование редуцирует конструктивный механизм сочленений. Лирический субъект
                   начинает диссонансный анжамбеман. Наш современник стал особенно чутко относиться
@@ -255,7 +261,7 @@
                   конструктивный механизм сочленений. Лирический субъект начинает диссонансный
                   анжамбеман. Наш современник стал особенно чутко относиться к слову.
                 </p>
-              </div> -->
+              </div>
             </li>
           </ul>
         </div>
