--- a/index.html
+++ b/index.html
@@ -212,8 +212,8 @@
         <h1 class="section-title section-title_white section-title_menu">Меню</h1>
         <div class="menu-accordeon">
           <ul class="menu-accordeon__list">
-            <li class="menu-accordeon__item">
-              <div class="menu-accordeon__title">
+            <li class="menu-accordeon__item menu-accordeon__item_active">
+              <div class="menu-accordeon__title menu-accordeon__title_meat">
                 <h2 class="menu-accordeon__title-txt">Для мясоедов</h2>
               </div>
               <div class="menu-accordeon__description">
@@ -230,8 +230,8 @@
               </div>
             </li>
             <li class="menu-accordeon__item">
-              <div class="menu-accordeon__title">
-                <h2 class="menu-accordeon__title-txt">Для мясоедов</h2>
+              <div class="menu-accordeon__title menu-accordeon__title_veg">
+                <h2 class="menu-accordeon__title-txt">Вегетарианское</h2>
               </div>
               <div class="menu-accordeon__description">
                 <p class="menu-accordeon__description-txt">
@@ -247,8 +247,8 @@
               </div>
             </li>
             <li class="menu-accordeon__item">
-              <div class="menu-accordeon__title">
-                <h2 class="menu-accordeon__title-txt">Для мясоедов</h2>
+              <div class="menu-accordeon__title menu-accordeon__title_diet">
+                <h2 class="menu-accordeon__title-txt">Диетическое</h2>
               </div>
               <div class="menu-accordeon__description">
                 <p class="menu-accordeon__description-txt">
