--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
       <section class="section team">
         <div class="container team__container">
           <div class="team__content">
-            <h1 class="section-title">Команда</h1>
+            <h1 class="section-title section-title_team">Команда</h1>
             <div class="team-accordeon">
               <ul class="team-accrodeon__list">
                 <li class="team-accordeon__item">
