--- a/index.html
+++ b/index.html
@@ -393,7 +393,7 @@
       </section>
 
       <section class="section section_centered order">
-        <div class="container">
+        <div class="container order__container">
 
           <h1 class="section-title">Закажите доставку</h1>
 
