--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
                 </svg>
               </div>
               <div class="best__content">
-                <div class="best__content-title">100% Свежее мясо</div>
+                <div class="best__content-title">100% свежее мясо</div>
                 <div class="best__content-text">
                   <p>
                     Драма представляет собой деструктивный цикл.
