--- a/index.html
+++ b/index.html
@@ -395,10 +395,10 @@
       <section class="section section_centered order">
         <div class="container order__container">
 
-          <h1 class="section-title">Закажите доставку</h1>
+          <h1 class="section-title section-title_order">Закажите доставку</h1>
 
           <form action="#" class="form">
-            <div class="form__container">
+            <div class="form__container-left">
               <div class="form__row">
                 <div class="form__block">
                   <div class="form__block-title"><label>Имя
@@ -435,36 +435,38 @@
               </div>
             </div>
 
-            <div class="form__container">
+            <div class="form__container-right">
               <div class="form__row">
                 <div class="form__block">
                   <div class="form__block-title"><label>Комментарий
                   <input type="text" class="form__block-input form__block-input_comment"></label></div>
                 </div>
               </div>
-              <div class="form-controlls">
-                <label class="form-controlls__btn">
-                  <input type="radio" name="answer" class="form-controlls__radio">
-                  <div class="form-controlls__fake-radio"></div>
-                  <div class="form-controlls__btn-title">Потребуется сдача</div>
-                </label>
-                <label class="form-controlls__btn">
-                  <input type="radio" name="answer" class="form-controlls__radio">
-                  <div class="form-controlls__fake-radio"></div>
-                  <div class="form-controlls__btn-title">Оплата по карте</div>
-                </label>
-              </div>
-              <div class="form-controlls">
-                <label class="form-controlls__btn">
-                  <input type="checkbox" name="answer" class="form-controlls__checkbox">
-                  <div class="form-controlls__fake-checkbox"></div>
-                  <div class="form-controlls__btn-title">Не перезванивать</div>
-                </label>
-              </div>
-              <div class="form__confirm">
-                <a href="#" class="btn form__confirm-btn">Заказать</a>
-                <div class="form__clear">
-                  <button class="btn btn_background_none" type="reset">Очистить</button>
+              <div class="form-cntrls">
+                <div class="form-controlls">
+                  <label class="form-controlls__btn">
+                    <input type="radio" name="answer" class="form-controlls__radio">
+                    <div class="form-controlls__fake-radio"></div>
+                    <div class="form-controlls__btn-title">Потребуется сдача</div>
+                  </label>
+                  <label class="form-controlls__btn">
+                    <input type="radio" name="answer" class="form-controlls__radio">
+                    <div class="form-controlls__fake-radio"></div>
+                    <div class="form-controlls__btn-title">Оплата по карте</div>
+                  </label>
+                </div>
+                <div class="form-controlls">
+                  <label class="form-controlls__btn">
+                    <input type="checkbox" name="answer" class="form-controlls__checkbox">
+                    <div class="form-controlls__fake-checkbox"></div>
+                    <div class="form-controlls__btn-title">Не перезванивать</div>
+                  </label>
+                </div>
+                <div class="form__confirm">
+                  <a href="#" class="btn form__confirm-btn">Заказать</a>
+                  <div class="form__clear">
+                    <button class="btn btn_background_none" type="reset">Очистить</button>
+                  </div>
                 </div>
               </div>
             </div>
