week2 done with commits

--- a/index.html
+++ b/index.html
@@ -212,7 +212,7 @@
         <h1 class="section-title section-title_white section-title_menu">Меню</h1>
         <div class="menu-accordeon">
           <ul class="menu-accordeon__list">
-            <li class="menu-accordeon__item">
+            <li class="menu-accordeon__item menu-accordeon__item_active">
               <div class="menu-accordeon__title menu-accordeon__title_meat">
                 <h2 class="menu-accordeon__title-txt">Для мясоедов</h2>
               </div>
@@ -227,6 +227,7 @@
                   конструктивный механизм сочленений. Лирический субъект начинает диссонансный
                   анжамбеман. Наш современник стал особенно чутко относиться к слову.
                 </p>
+                <button class="menu-accordeon__description-close"></button>
               </div>
             </li>
             <li class="menu-accordeon__item">
