--- a/index.html
+++ b/index.html
@@ -212,7 +212,7 @@
         <h1 class="section-title section-title_white section-title_menu">Меню</h1>
         <div class="menu-accordeon">
           <ul class="menu-accordeon__list">
-            <li class="menu-accordeon__item menu-accordeon__item_active">
+            <li class="menu-accordeon__item">
               <div class="menu-accordeon__title menu-accordeon__title_meat">
                 <h2 class="menu-accordeon__title-txt">Для мясоедов</h2>
               </div>
@@ -491,28 +491,28 @@
             <div class="footer__social">
               <ul class="social__list">
                 <li class="social__item">
-                  <a href="#" class="social__link">
+                  <a href="#" class="social__link" alt="Вконтакте">
                     <svg class="social__icon">
                       <use xlink:href="./sprite.svg#vk-icon"></use>
                     </svg>
                   </a>
                 </li>
                 <li class="social__item">
-                  <a href="#" class="social__link">
+                  <a href="#" class="social__link" alt="Фуйсбук">
                     <svg class="social__icon">
                       <use xlink:href="./sprite.svg#fb-icon"></use>
                     </svg>
                   </a>
                 </li>
                 <li class="social__item">
-                  <a href="#" class="social__link">
+                  <a href="#" class="social__link" alt="Инстаграм">
                     <svg class="social__icon">
                       <use xlink:href="./sprite.svg#inst-icon"></use>
                     </svg>
                   </a>
                 </li>
                 <li class="social__item">
-                  <a href="#" class="social__link">
+                  <a href="#" class="social__link" alt="Твиттер">
                     <svg class="social__icon">
                       <use xlink:href="./sprite.svg#twitter-icon"></use>
                     </svg>
