--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
 
       <section class="section section_centered best">
         <div class="container best__container">
-          <h1 class="section-title section-title_black">Мы лучшие</h1>
+          <h1 class="section-title section-title_black section-title_best">Мы лучшие</h1>
           <ul class="best__list">
             <li class="best__item">
               <div class="best__image">
