--- a/index.html
+++ b/index.html
@@ -157,48 +157,56 @@
                 <li class="team-accordeon__item">
                   <h3 class="team-accordeon__title">Дэниэл Редклиф</h3>
                   <div class="team-accordeon__content">
-                    <div class="team-accordeon__avatar">
-                      <img class="team-accordeon__avatar-img" src="./images/team-2.png" alt="Фото Дэниэла">
-                    </div>
-                    <div class="team-accordeon__description">
-                      <h4 class="team-accordeon__description-title">Оператор</h4>
-                      <p class="team-accordeon__description-text">С радостью поможет подобрать идеальный бургер и оформить заказ.</p>
+                    <div class="team-accordeon__content_all">
+                      <div class="team-accordeon__avatar">
+                        <img class="team-accordeon__avatar-img" src="./images/team-2.png" alt="Фото Ричарда">
+                      </div>
+                      <div class="team-accordeon__description">
+                        <h4 class="team-accordeon__description-title">Оператор</h4>
+                        <p class="team-accordeon__description-text">С радостью поможет подобрать идеальный бургер и оформить заказ.</p>
+                      </div>
                     </div>
                   </div>
                 </li>
-                <li class="team-accordeon__item team-accordeon__item_active">
+                <li class="team-accordeon__item">
                   <h3 class="team-accordeon__title">Ричард Джеймс</h3>
                   <div class="team-accordeon__content">
-                    <div class="team-accordeon__avatar">
-                      <img class="team-accordeon__avatar-img" src="./images/team-2.png" alt="Фото Ричарда">
-                    </div>
-                    <div class="team-accordeon__description">
-                      <h4 class="team-accordeon__description-title">Оператор</h4>
-                      <p class="team-accordeon__description-text">С радостью поможет подобрать идеальный бургер и оформить заказ.</p>
+                    <div class="team-accordeon__content_all">
+                      <div class="team-accordeon__avatar">
+                        <img class="team-accordeon__avatar-img" src="./images/team-2.png" alt="Фото Ричарда">
+                      </div>
+                      <div class="team-accordeon__description">
+                        <h4 class="team-accordeon__description-title">Оператор</h4>
+                        <p class="team-accordeon__description-text">С радостью поможет подобрать идеальный бургер и оформить заказ.</p>
+                      </div>
                     </div>
                   </div>
                 </li>
                 <li class="team-accordeon__item">
                   <h3 class="team-accordeon__title">Джейк Финн</h3>
                   <div class="team-accordeon__content">
-                    <div class="team-accordeon__avatar">
-                      <img class="team-accordeon__avatar-img" src="./images/team-2.png" alt="Фото Джейка">
-                    </div>
-                    <div class="team-accordeon__description">
-                      <h4 class="team-accordeon__description-title">Оператор</h4>
-                      <p class="team-accordeon__description-text">С радостью поможет подобрать идеальный бургер и оформить заказ.</p>
+                    <div class="team-accordeon__content_all">
+                      <div class="team-accordeon__avatar">
+                        <img class="team-accordeon__avatar-img" src="./images/team-2.png" alt="Фото Ричарда">
+                      </div>
+                      <div class="team-accordeon__description">
+                        <h4 class="team-accordeon__description-title">Оператор</h4>
+                        <p class="team-accordeon__description-text">С радостью поможет подобрать идеальный бургер и оформить заказ.</p>
+                      </div>
                     </div>
                   </div>
                 </li>
                 <li class="team-accordeon__item">
                   <h3 class="team-accordeon__title">Николай Иванов</h3>
                   <div class="team-accordeon__content">
-                    <div class="team-accordeon__avatar">
-                      <img class="team-accordeon__avatar-img" src="./images/team-2.png" alt="Фото Николая">
-                    </div>
-                    <div class="team-accordeon__description">
-                      <h4 class="team-accordeon__description-title">Оператор</h4>
-                      <p class="team-accordeon__description-text">С радостью поможет подобрать идеальный бургер и оформить заказ.</p>
+                    <div class="team-accordeon__content_all">
+                      <div class="team-accordeon__avatar">
+                        <img class="team-accordeon__avatar-img" src="./images/team-2.png" alt="Фото Ричарда">
+                      </div>
+                      <div class="team-accordeon__description">
+                        <h4 class="team-accordeon__description-title">Оператор</h4>
+                        <p class="team-accordeon__description-text">С радостью поможет подобрать идеальный бургер и оформить заказ.</p>
+                      </div>
                     </div>
                   </div>
                 </li>
@@ -560,6 +568,6 @@
 
     <!-- wrapper closed -->
   </div>
-
+  <script src="js/acco.js"></script>
 </body>
 </html>
