--- a/index.html
+++ b/index.html
@@ -571,6 +571,7 @@
 
     <!-- wrapper closed -->
   </div>
-  <script src="js/acco.js"></script>
+  <!-- <script src="js/menu-acco.js"></script> -->
+  <script src="js/team-acco.js"></script>
 </body>
 </html>
