--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
                             <use xlink:href="./sprite.svg#burger-icon"></use>
                           </svg>
                         </div>
-                          <p class="popup__picture-name">Состав</p>
+                        <p class="popup__picture-name">Состав</p>
                         <a href="#" class="popup__close"></a>
                         <div class="popup__content">
 
@@ -177,8 +177,12 @@
                       </div>
                     </div>
                   </div>
-                  <div class="ccal">
-                    <img src="#" alt="Килокалории">
+                  <div class="slider__kkal">
+                    <svg class="slider__kkal-icon">
+                      <use xlink:href="./sprite.svg#kkal-icon"></use>
+                    </svg>
+                    <p class="slider__kkal-quan">1200</p>
+                    <p class="slider__kkal-name">Ккал</p>
                   </div>
                 </div>
                 <div class="slider__right">
@@ -195,7 +199,7 @@
                   <div class="slider__price">
                     <h2 class="slider__price-digits">500</h2>
                     <h3 class="slider__price-currency">рублей</h3>
-                    <button class="btn">Заказать</button>
+                    <a href="#" class="btn product__btn">Заказать</a>
                   </div>
                 </div>
               </li>
