--- a/index.html
+++ b/index.html
@@ -292,17 +292,19 @@
                 <h2 class="menu-accordeon__title-txt">Для мясоедов</h2>
               </div>
               <div class="menu-accordeon__description">
-                <p class="menu-accordeon__description-txt">
-                  Речевой акт редуцирует диалектический характер. Развивая эту тему,
-                  заимствование редуцирует конструктивный механизм сочленений. Лирический субъект
-                  начинает диссонансный анжамбеман. Наш современник стал особенно чутко относиться
-                  к слову, однако механизм сочленений неустойчив. Модальность высказывания, как
-                  справедливо считает И.Гальперин, пространственно выбирает метр. Речевой акт
-                  редуцирует диалектический характер. Развивая эту тему, заимствование редуцирует
-                  конструктивный механизм сочленений. Лирический субъект начинает диссонансный
-                  анжамбеман. Наш современник стал особенно чутко относиться к слову.
-                </p>
-                <button class="menu-accordeon__description-close"></button>
+                <div class="menu-accordeon__description_all">
+                  <p class="menu-accordeon__description-txt">
+                    Речевой акт редуцирует диалектический характер. Развивая эту тему,
+                    заимствование редуцирует конструктивный механизм сочленений. Лирический субъект
+                    начинает диссонансный анжамбеман. Наш современник стал особенно чутко относиться
+                    к слову, однако механизм сочленений неустойчив. Модальность высказывания, как
+                    справедливо считает И.Гальперин, пространственно выбирает метр. Речевой акт
+                    редуцирует диалектический характер. Развивая эту тему, заимствование редуцирует
+                    конструктивный механизм сочленений. Лирический субъект начинает диссонансный
+                    анжамбеман. Наш современник стал особенно чутко относиться к слову.
+                  </p>
+                  <button class="menu-accordeon__description-close"></button>
+                </div>
               </div>
             </li>
             <li class="menu-accordeon__item">
@@ -310,17 +312,19 @@
                 <h2 class="menu-accordeon__title-txt">Вегетарианское</h2>
               </div>
               <div class="menu-accordeon__description">
-                <p class="menu-accordeon__description-txt">
-                  Речевой акт редуцирует диалектический характер. Развивая эту тему,
-                  заимствование редуцирует конструктивный механизм сочленений. Лирический субъект
-                  начинает диссонансный анжамбеман. Наш современник стал особенно чутко относиться
-                  к слову, однако механизм сочленений неустойчив. Модальность высказывания, как
-                  справедливо считает И.Гальперин, пространственно выбирает метр. Речевой акт
-                  редуцирует диалектический характер. Развивая эту тему, заимствование редуцирует
-                  конструктивный механизм сочленений. Лирический субъект начинает диссонансный
-                  анжамбеман. Наш современник стал особенно чутко относиться к слову.
-                </p>
-                <button class="menu-accordeon__description-close"></button>
+                <div class="menu-accordeon__description_all">
+                  <p class="menu-accordeon__description-txt">
+                    Речевой акт редуцирует диалектический характер. Развивая эту тему,
+                    заимствование редуцирует конструктивный механизм сочленений. Лирический субъект
+                    начинает диссонансный анжамбеман. Наш современник стал особенно чутко относиться
+                    к слову, однако механизм сочленений неустойчив. Модальность высказывания, как
+                    справедливо считает И.Гальперин, пространственно выбирает метр. Речевой акт
+                    редуцирует диалектический характер. Развивая эту тему, заимствование редуцирует
+                    конструктивный механизм сочленений. Лирический субъект начинает диссонансный
+                    анжамбеман. Наш современник стал особенно чутко относиться к слову.
+                  </p>
+                  <button class="menu-accordeon__description-close"></button>
+                </div>
               </div>
             </li>
             <li class="menu-accordeon__item">
@@ -328,17 +332,19 @@
                 <h2 class="menu-accordeon__title-txt">Диетическое</h2>
               </div>
               <div class="menu-accordeon__description">
-                <p class="menu-accordeon__description-txt">
-                  Речевой акт редуцирует диалектический характер. Развивая эту тему,
-                  заимствование редуцирует конструктивный механизм сочленений. Лирический субъект
-                  начинает диссонансный анжамбеман. Наш современник стал особенно чутко относиться
-                  к слову, однако механизм сочленений неустойчив. Модальность высказывания, как
-                  справедливо считает И.Гальперин, пространственно выбирает метр. Речевой акт
-                  редуцирует диалектический характер. Развивая эту тему, заимствование редуцирует
-                  конструктивный механизм сочленений. Лирический субъект начинает диссонансный
-                  анжамбеман. Наш современник стал особенно чутко относиться к слову.
-                </p>
-                <button class="menu-accordeon__description-close"></button>
+                <div class="menu-accordeon__description_all">
+                  <p class="menu-accordeon__description-txt">
+                    Речевой акт редуцирует диалектический характер. Развивая эту тему,
+                    заимствование редуцирует конструктивный механизм сочленений. Лирический субъект
+                    начинает диссонансный анжамбеман. Наш современник стал особенно чутко относиться
+                    к слову, однако механизм сочленений неустойчив. Модальность высказывания, как
+                    справедливо считает И.Гальперин, пространственно выбирает метр. Речевой акт
+                    редуцирует диалектический характер. Развивая эту тему, заимствование редуцирует
+                    конструктивный механизм сочленений. Лирический субъект начинает диссонансный
+                    анжамбеман. Наш современник стал особенно чутко относиться к слову.
+                  </p>
+                  <button class="menu-accordeon__description-close"></button>
+                </div>
               </div>
             </li>
           </ul>
@@ -638,7 +644,6 @@
 
     <!-- wrapper closed -->
   </div>
-  <!-- <script src="js/menu-acco.js"></script> -->
-  <script src="js/team-acco.js"></script>
+  <script src="js/acco.js"></script>
 </body>
 </html>
