--- a/index.html
+++ b/index.html
@@ -150,6 +150,7 @@
 
       <section class="section product">
         <div class="container product__container">
+
           <div class="arrow arrow_left">
             <a href="#" id='arrow-left' class="arrow__link">
               <svg class="arrow__icon">
@@ -157,10 +158,12 @@
               </svg>
             </a>
           </div>
+
           <div class="slider">
             <ul class="slider__list">
               <li class="slider__item">
                 <div class="slider__left">
+
                   <div class="popup">
                     <div class="overlay">
                       <div class="popup__container">
@@ -177,6 +180,11 @@
                       </div>
                     </div>
                   </div>
+
+                  <div class="slider__burger">
+                    <img src="./images/slider-1.png" alt="Бургер с чернилами каракатицы" class="slider__burger-pic">
+                  </div>
+
                   <div class="slider__kkal">
                     <svg class="slider__kkal-icon">
                       <use xlink:href="./sprite.svg#kkal-icon"></use>
@@ -185,6 +193,7 @@
                     <p class="slider__kkal-name">Ккал</p>
                   </div>
                 </div>
+
                 <div class="slider__right">
                   <div class="slider__title">
                     <h1 class="section-title section-title_white section-title_product">Dark Beef Burger</h1>
