--- a/index.html
+++ b/index.html
@@ -150,76 +150,77 @@
 
       <section class="section product">
         <div class="container product__container">
+          <div class="product__content">
+            <div class="arrow arrow_left">
+              <a href="#" id='arrow-left' class="arrow__link">
+                <svg class="arrow__icon">
+                  <use xlink:href="./sprite.svg#arrow-icon"></use>
+                </svg>
+              </a>
+            </div>
 
-          <div class="arrow arrow_left">
-            <a href="#" id='arrow-left' class="arrow__link">
-              <svg class="arrow__icon">
-                <use xlink:href="./sprite.svg#arrow-icon"></use>
-              </svg>
-            </a>
-          </div>
+            <div class="slider">
+              <ul class="slider__list">
+                <li class="slider__item">
+                  <div class="slider__left">
 
-          <div class="slider">
-            <ul class="slider__list">
-              <li class="slider__item">
-                <div class="slider__left">
+                    <div class="popup">
+                      <div class="overlay">
+                        <div class="popup__container">
+                          <div class="popup__picture">
+                            <svg class="popup__picture-icon">
+                              <use xlink:href="./sprite.svg#burger-icon"></use>
+                            </svg>
+                          </div>
+                          <p class="popup__picture-name">Состав</p>
+                          <a href="#" class="popup__close"></a>
+                          <div class="popup__content">
 
-                  <div class="popup">
-                    <div class="overlay">
-                      <div class="popup__container">
-                        <div class="popup__picture">
-                          <svg class="popup__picture-icon">
-                            <use xlink:href="./sprite.svg#burger-icon"></use>
-                          </svg>
-                        </div>
-                        <p class="popup__picture-name">Состав</p>
-                        <a href="#" class="popup__close"></a>
-                        <div class="popup__content">
-
+                          </div>
                         </div>
                       </div>
                     </div>
+
+                    <div class="slider__burger">
+                      <img src="./images/slider-1.png" alt="Бургер с чернилами каракатицы" class="slider__burger-pic">
+                    </div>
+
+                    <div class="slider__kkal">
+                      <svg class="slider__kkal-icon">
+                        <use xlink:href="./sprite.svg#kkal-icon"></use>
+                      </svg>
+                      <p class="slider__kkal-quan">1200</p>
+                      <p class="slider__kkal-name">Ккал</p>
+                    </div>
                   </div>
 
-                  <div class="slider__burger">
-                    <img src="./images/slider-1.png" alt="Бургер с чернилами каракатицы" class="slider__burger-pic">
+                  <div class="slider__right">
+                    <div class="slider__title">
+                      <h1 class="section-title section-title_white section-title_product">Dark Beef Burger</h1>
+                    </div>
+                    <div class="slider__description">
+                      <p class="slider__description-text">
+                        Ваш старый добрый знакомый, с рубленым бифштексом из 100% говядины,
+                        тремя кусочками нежнейшего сыра эмменталь, двумя помидорами, луком,
+                        салатом и соусом гриль теперь с добавлением экзотического соуса чураско.
+                      </p>
+                    </div>
+                    <div class="slider__price">
+                      <h2 class="slider__price-digits">500</h2>
+                      <h3 class="slider__price-currency">рублей</h3>
+                      <a href="#" class="btn product__btn">Заказать</a>
+                    </div>
                   </div>
-
-                  <div class="slider__kkal">
-                    <svg class="slider__kkal-icon">
-                      <use xlink:href="./sprite.svg#kkal-icon"></use>
-                    </svg>
-                    <p class="slider__kkal-quan">1200</p>
-                    <p class="slider__kkal-name">Ккал</p>
-                  </div>
-                </div>
-
-                <div class="slider__right">
-                  <div class="slider__title">
-                    <h1 class="section-title section-title_white section-title_product">Dark Beef Burger</h1>
-                  </div>
-                  <div class="slider__description">
-                    <p class="slider__description-text">
-                      Ваш старый добрый знакомый, с рубленым бифштексом из 100% говядины,
-                      тремя кусочками нежнейшего сыра эмменталь, двумя помидорами, луком,
-                      салатом и соусом гриль теперь с добавлением экзотического соуса чураско.
-                    </p>
-                  </div>
-                  <div class="slider__price">
-                    <h2 class="slider__price-digits">500</h2>
-                    <h3 class="slider__price-currency">рублей</h3>
-                    <a href="#" class="btn product__btn">Заказать</a>
-                  </div>
-                </div>
-              </li>
-            </ul>
-          </div>
-          <div class="arrow arrow_right">
-            <a href="#" id='arrow-right' class="arrow__link">
-              <svg class="arrow__icon">
-                <use xlink:href="./sprite.svg#arrow-icon"></use>
-              </svg>
-            </a>
+                </li>
+              </ul>
+            </div>
+            <div class="arrow arrow_right">
+              <a href="#" id='arrow-right' class="arrow__link">
+                <svg class="arrow__icon">
+                  <use xlink:href="./sprite.svg#arrow-icon"></use>
+                </svg>
+              </a>
+            </div>
           </div>
         </div>
       </section>
