--- a/index.html
+++ b/index.html
@@ -569,7 +569,8 @@
         </div>
       </section>
 
-      <section class="section map">
+      <section class="section map" id="map">
+        <div id="YMapsID" style="width: 100%; height: 100%;"></div>
         <footer class="footer">
           <div class="container footer__container">
             <div class="footer__content">
@@ -660,30 +661,30 @@
         </svg>
       </div>
 
-      <button class="close-btn close-btn_hamburger-menu" id="close-hamburger"></button>
+      <button class="close-btn" id="close-hamburger"></button>
 
-      <nav class="nav">
+      <nav class="nav" id="nav">
         <ul class="nav__list nav__list_hamburger-menu">
           <li class="nav__item" id="nav__item">
-            <a href="#about" class="nav__link">О нас</a>
+            <a href="#about" class="nav__link" id="nav__link">О нас</a>
           </li>
           <li class="nav__item" id="nav__item">
-            <a href="#burgers" class="nav__link">Бургеры</a>
+            <a href="#burgers" class="nav__link" id="nav__link">Бургеры</a>
           </li>
           <li class="nav__item" id="nav__item">
-            <a href="#team" class="nav__link">Команда</a>
+            <a href="#team" class="nav__link" id="nav__link">Команда</a>
           </li>
           <li class="nav__item" id="nav__item">
-            <a href="#menu" class="nav__link">Меню</a>
+            <a href="#menu" class="nav__link" id="nav__link">Меню</a>
           </li>
           <li class="nav__item" id="nav__item">
-            <a href="#feedback" class="nav__link">Отзывы</a>
+            <a href="#feedback" class="nav__link" id="nav__link">Отзывы</a>
           </li>
           <li class="nav__item" id="nav__item">
-            <a href="#how" class="nav__link">Как мы работаем</a>
+            <a href="#how" class="nav__link" id="nav__link">Как мы работаем</a>
           </li>
           <li class="nav__item" id="nav__item">
-            <a href="#contacts" class="nav__link">Контакты</a>
+            <a href="#contacts" class="nav__link" id="nav__link">Контакты</a>
           </li>
         </ul>
       </nav>
@@ -693,6 +694,7 @@
 
     <!-- wrapper closed -->
   </div>
+  <script src="js/hamburger-menu.js"></script>
   <script src="js/acco.js"></script>
 </body>
 </html>
