--- a/index.html
+++ b/index.html
@@ -165,7 +165,6 @@
                   <div class="slider__left">
 
                     <div class="popup">
-                      <div class="overlay">
                         <div class="popup__container">
                           <div class="popup__picture">
                             <svg class="popup__picture-icon">
@@ -173,12 +172,53 @@
                             </svg>
                           </div>
                           <p class="popup__picture-name">Состав</p>
-                          <a href="#" class="popup__close"></a>
-                          <div class="popup__content">
-
-                          </div>
                         </div>
-                      </div>
+                        <div class="popup__content">
+                          <ul class="popup__list">
+                            <li class="popup__item">
+                              <svg class="popup__item-icon">
+                                <use xlink:href="./sprite.svg#beef-icon"></use>
+                              </svg>
+                              <p class="popup__item-title">Говядина</p>
+                              <p class="popup__item-gramm">300 г</p>
+                            </li>
+                            <li class="popup__item">
+                              <svg class="popup__item-icon">
+                                <use xlink:href="./sprite.svg#buns-icon"></use>
+                              </svg>
+                              <p class="popup__item-title">Булочки</p>
+                              <p class="popup__item-gramm">100 г</p>
+                            </li>
+                            <li class="popup__item">
+                              <svg class="popup__item-icon">
+                                <use xlink:href="./sprite.svg#salad-icon"></use>
+                              </svg>
+                              <p class="popup__item-title">Зелень</p>
+                              <p class="popup__item-gramm">70 г</p>
+                            </li>
+                            <li class="popup__item">
+                              <svg class="popup__item-icon">
+                                <use xlink:href="./sprite.svg#sauce-icon"></use>
+                              </svg>
+                              <p class="popup__item-title">Соус</p>
+                              <p class="popup__item-gramm">150 г</p>
+                            </li>
+                            <li class="popup__item">
+                              <svg class="popup__item-icon">
+                                <use xlink:href="./sprite.svg#cucumber-icon"></use>
+                              </svg>
+                              <p class="popup__item-title">Овощи</p>
+                              <p class="popup__item-gramm">200 г</p>
+                            </li>
+                            <li class="popup__item">
+                              <svg class="popup__item-icon">
+                                <use xlink:href="./sprite.svg#cheese-icon"></use>
+                              </svg>
+                              <p class="popup__item-title">Сыр</p>
+                              <p class="popup__item-gramm">80 г</p>
+                            </li>
+                          </ul>
+                        </div>
                     </div>
 
                     <div class="slider__burger">
