--- a/index.html
+++ b/index.html
@@ -724,7 +724,7 @@
             <a href="#how" class="nav__link" id="nav__link">Как мы работаем</a>
           </li>
           <li class="nav__item" id="nav__item">
-            <a href="#contacts" class="nav__link" id="nav__link">Контакты</a>
+            <a href="#map" class="nav__link" id="nav__link">Контакты</a>
           </li>
         </ul>
       </nav>
